tests/files/parser_tests/should_fail/073.cmdr
//Should not parse if-chain
if (true) {
    echo hi;
} else if ((true, false)[1]) {
    echo there;
} if (false) {
    echo bye;
} else {
    echo adios;

